--- a/sn-bibliography.bib
+++ b/sn-bibliography.bib
@@ -750,3 +750,25 @@
   year={2013},
   publisher={American Medical Association}
 }
+
+@article{enwald2010preventing,
+  title={Preventing the obesity epidemic by second generation tailored health communication: an interdisciplinary review},
+  author={Enwald, Heidi P{\"a}ivyt Karoliina and Huotari, Maija-Leena Aulikki},
+  journal={Journal of medical Internet research},
+  volume={12},
+  number={2},
+  pages={e24},
+  year={2010},
+  publisher={Gunther Eysenbach Centre for Global eHealth Innovation, Toronto, Canada}
+}
+
+@article{dimitrova2017acupuncture,
+  title={Acupuncture for the treatment of peripheral neuropathy: a systematic review and meta-analysis},
+  author={Dimitrova, Alexandra and Murchison, Charles and Oken, Barry},
+  journal={The Journal of Alternative and Complementary Medicine},
+  volume={23},
+  number={3},
+  pages={164--179},
+  year={2017},
+  publisher={Mary Ann Liebert, Inc. 140 Huguenot Street, 3rd Floor New Rochelle, NY 10801 USA}
+}
