Template for domain 5 complere. Content and Refs remain.

--- a/sn-article.tex
+++ b/sn-article.tex
@@ -958,6 +958,12 @@ This ensures transparency and reduces the risk of bias arising from selective re
 %
 %
 \subsection*{Signalling question - 5.1 }
+\label{subsec:5_1}
+%
+``Were the data that produced this result analysed in accordance with a pre-specified analysis plan that was finalized before unblinded outcome data were available for analysis?''
+
+%
+%
 %
 \begin{figure}[htbp]
     \centering
@@ -968,7 +974,18 @@ This ensures transparency and reduces the risk of bias arising from selective re
 %
 %
 %
+
+For annotation instructions for this signalling question, ``RoB 5.1 Were the data that produced this result analysed in accordance with a pre-specified analysis plan that was finalized before unblinded outcome data were available for analysis?'' follow the Flowchart~\ref{fig:5_1}.
+
+%
+%
+%
 \subsection*{Signalling question - 5.2 }
+%
+``Is the numerical result being assessed likely to have been selected, on the basis of the results, from multiple eligible outcome measurements (e.g. scales, definitions, time points) within the outcome domain?'' 
+
+%
+%
 %
 \begin{figure}[htbp]
     \centering
@@ -979,7 +996,19 @@ This ensures transparency and reduces the risk of bias arising from selective re
 %
 %
 %
+
+For annotation instructions for this signalling question, ``Is the numerical result being assessed likely to have been selected, on the basis of the results, from multiple eligible outcome measurements (e.g. scales, definitions, time points) within the outcome domain?'' follow the Flowchart~\ref{fig:5_2}.
+
+
+%
+%
+%
 \subsection*{Signalling question - 5.3 }
+%
+``Is the numerical result being assessed likely to have been selected, on the basis of the results, from multiple eligible analyses of the data?''
+
+%
+%
 %
 \begin{figure}[htbp]
     \centering
@@ -990,7 +1019,14 @@ This ensures transparency and reduces the risk of bias arising from selective re
 %
 %
 %
-\clearpage
+
+For annotation instructions for this signalling question, ``Is the numerical result being assessed likely to have been selected, on the basis of the results, from multiple eligible analyses of the data??'' follow the Flowchart~\ref{fig:5_3}.
+
+
+%
+%
+%
+
 %%===========================================================================================%%
 %% If you are submitting to one of the Nature Portfolio journals using the eJP submission   %%
 %% system, please include the references within the manuscript file itself. You may do this  %%
