--- a/sn-article.tex
+++ b/sn-article.tex
@@ -960,10 +960,9 @@ This ensures transparency and reduces the risk of bias arising from selective re
 \subsection*{Signalling question - 5.1 }
 \label{subsec:5_1}
 %
-``Were the data that produced this result analysed in accordance with a pre-specified analysis plan that was finalized before unblinded outcome data were available for analysis?'' evaluates whether particular results were analyzed according to a pre-defined analysis plan that was established before the researchers had access to the unblinded outcome data.
-By finalizing the analysis plan before having access to the unblinded outcome data, researchers can reduce the risk of bias introduced by knowledge of the results.
-This question is evaluating whether the analysis plan was determined in advance, without knowledge of the unblinded outcome data.
-If the analysis plan was established before accessing the results, it suggests that the analysis was conducted independently of the researchers' knowledge of the outcome, reducing the potential for bias in the interpretation of the data.
+The signalling question 5.1, ``Were the data that produced this result analyzed in accordance with a pre-specified analysis plan that was finalized before unblinded outcome data were available for analysis?'' evaluates whether particular results were analyzed according to a pre-defined analysis plan that was established before the researchers had access to the unblinded outcome data.
+Suppose the analysis plan was established before accessing the unblinded outcome results and was followed correctly after obtaining the results; then it suggests that the analysis was conducted independently of the researcher's knowledge of the outcome, reducing the potential for bias in the interpretation of the data.
+If an analysis plan was established until after accessing the results of the outcome, then some risk of bias could be introduced by knowledge of the results.
 
 %
 %
