--- a/sn-article.tex
+++ b/sn-article.tex
@@ -985,10 +985,11 @@ For annotation instructions for this signalling question, ``RoB 5.1 Were the dat
 \subsection*{Signalling question - 5.2 }
 \label{subsec:5_2}
 %
-``Is the numerical result being assessed likely to have been selected, on the basis of the results, from multiple eligible outcome measurements (e.g. scales, definitions, time points) within the outcome domain?'' aims to determine whether the researchers selectively chose a specific numerical result among various possible outcome measurements, such as different scales, definitions, or time points, based on the findings they obtained.
-This question addresses the potential bias introduced when researchers have flexibility in selecting and reporting outcome measurements within a particular domain.
-If researchers have access to multiple outcome measurements and choose the one that yields a favorable or significant result, it can introduce bias and compromise the objectivity of the findings. 
-By evaluating this risk of bias, it helps assess whether the reported result was genuinely chosen based on a predetermined criterion or if it was selectively chosen based on the obtained results, potentially introducing a bias in favor of a particular outcome measurement.
+The signalling question 5.2, ``Is the numerical result being assessed likely to have been selected, on the basis of the results, from multiple eligible outcome measurements (e.g. scales, definitions, time points) within the outcome domain?'' aims to evaluate whether the researchers selectively chose a specific result among various possible outcome measurements, such as different scales, definitions, or time points, based on the findings they obtained.
+If researchers have access to multiple outcome measurements and choose the one that yields a favourable or significant result, it can introduce bias and compromise the objectivity of the findings. 
+Evaluating this risk of bias helps assess whether the reported result was genuinely chosen based on a predetermined protocol plan or selectively chosen based on the obtained results, potentially introducing a bias in favour of a particular outcome measurement.
+
+
 %
 %
 %
