SQ 5.3 content added

--- a/sn-article.tex
+++ b/sn-article.tex
@@ -1012,16 +1012,9 @@ For annotation instructions for this signalling question, ``Is the numerical res
 \subsection*{Signalling question - 5.3 }
 \label{subsec:5_3}
 %
-``Is the numerical result being assessed likely to have been selected, on the basis of the results, from multiple eligible analyses of the data?''
-The risk of bias question you mentioned is assessing the likelihood that the numerical result being evaluated was selected, based on the obtained results, from multiple eligible analyses of the data. In other words, it aims to determine whether the researchers selectively chose a specific numerical result among various possible analyses of the data based on the findings they obtained.
-This question addresses the potential bias introduced when researchers have flexibility in conducting multiple analyses on the same dataset and selectively report the analysis that yields a favorable or significant result.
-If researchers have conducted various analyses and choose to report only the analysis that supports their hypothesis or desired outcome, it can introduce bias and compromise the objectivity of the findings.
-By evaluating this risk of bias, it helps assess whether the reported numerical result was genuinely chosen based on a predetermined analysis plan or if it was selectively chosen based on the obtained results, potentially introducing a bias in favor of a particular analysis.
-This question emphasizes the importance of pre-specifying the analysis plan before accessing the results to ensure transparency and mitigate the risk of biased reporting.
-
-
-
-
+This signalling question 5.3, ``Is the numerical result being assessed likely to have been selected, on the basis of the results, from multiple eligible analyses of the data?'' aims to determine whether the researchers selectively chose a specific numerical result among various possible data analyses based on the findings they obtained.
+When researchers have flexibility in conducting multiple analyses on the same dataset and selecting and reporting the analysis that yields favourable results and supports some hypothesis, it could potentially introduce some risk of bias.
+Hence this question aims to analyse whether a predefined analysis plan was in place in the trial protocol and whether it was genuinely followed for results analysis and reporting to ensure transparency and mitigate the risk of biased reporting.
 
 
 %
