--- a/sn-bibliography.bib
+++ b/sn-bibliography.bib
@@ -772,3 +772,13 @@
   year={2017},
   publisher={Mary Ann Liebert, Inc. 140 Huguenot Street, 3rd Floor New Rochelle, NY 10801 USA}
 }
+
+@article{riiser2022cycling,
+  title={E-cycling and health benefits: A systematic literature review with meta-analyses},
+  author={Riiser, Amund and Bere, Elling and Andersen, Lars Bo and Nordengen, Solveig},
+  journal={Frontiers in sports and active living},
+  volume={4},
+  pages={1031004},
+  year={2022},
+  publisher={Frontiers}
+}
