--- a/sn-article.tex
+++ b/sn-article.tex
@@ -1017,7 +1017,16 @@ Evaluating this risk of bias helps assess whether the reported result was genuin
 %
 
 For annotation instructions for this signalling question, ``Is the numerical result being assessed likely to have been selected, on the basis of the results, from multiple eligible outcome measurements (e.g. scales, definitions, time points) within the outcome domain?'' follow the Flowchart~\ref{fig:5_2}.
-
+In accordance with the explanation above, the first diamond in the flowchart asks the annotators to find the outcomes of interest that were assessed. 
+Next, they are requested to check whether any protocol/registry/statistical analysis plan attached to the trial document.
+If a trial protocol is not found, then the study will be automatically considered as ``5.2 No Information'' for this signalling question.
+If a trial protocol is found, follow to identify all the outcome measures used to assess the target outcome in the trial protocol? 
+Mark the sentence that mentions them.
+This information should be found in the trial protocol and if not found then the study will be automatically considered as ``5.2 No Information''.
+Were some of these outcome measures found in the protocol omitted in the clinical trial?
+Mark the sentence that mentions them.
+This information should be found in the methods section of the clinical trial.
+If all the outcome measures as listed in the protocol are reported in the clinical study, then label the trial as ``5.2 Yes Good'' and otherwise ``5.2 No Bad''.
 
 %
 %
