--- a/sn-article.tex
+++ b/sn-article.tex
@@ -1054,19 +1054,19 @@ Hence this question aims to analyse whether a predefined analysis plan was in pl
 
 For annotation instructions for this signalling question, ``Is the numerical result being assessed likely to have been selected, on the basis of the results, from multiple eligible analyses of the data??'' follow the Flowchart~\ref{fig:5_3}.
 In accordance with the explanation above, the first diamond in the flowchart asks the annotators if a trial protocol is found.
-If a trial protocol is not found, then the study will be automatically considered as ``5.3 No Information'' for this signalling question.
-If a trial protocol is found, did you find all the prespecified methods of analysis used to assess effect of intervention on the target outcome in the trial protocol?
+If a trial protocol is not found, then the study will be automatically considered as ``5.3 No Information''.
+If a trial protocol is found, the annotators are asked to find all the prespecified methods of analysis used to assess effect of intervention on the target outcome in the trial protocol?
 Mark the sentence that mentions them.
-This information should be found in the trial protocol and if not found then the study will be automatically considered as ``5.3 No Information''.
-Were some of these  methods of analysis found in the protocol omitted in the clinical trial or were there are additional analysis methods not reported in the protocol?
-Annotate the sentence(s) that mentions these methods in context of intervention effect assessment.
+%This information should be found in the trial protocol and if not found then the study will be automatically considered as ``5.3 No Information''.
+Check if all the outcomes analysis methods found in the trial protocol were also found in the clinical study.
+If some of these  methods of analysis found in the protocol were omitted in the clinical trial or in case there are additional analysis methods not reported in the protocol, then annotate the sentence(s) that mentions these methods in context of intervention effect assessment.
+If some of the methods were missing or some additional methods were conducted for outcomes analysis then label these descriptions as ``5.3 No Bad'' and otherwise ``5.3 Yes Good''.
 This information should be found in the methods section (statistical analysis) of the clinical trial.
-If all the outcome measures as listed in the protocol are reported in the clinical study, then label the trial as ``5.3 Yes Good'' and otherwise ``5.3 No Bad''.
+
 
 %
 %
 %
-
 %%===========================================================================================%%
 %% If you are submitting to one of the Nature Portfolio journals using the eJP submission   %%
 %% system, please include the references within the manuscript file itself. You may do this  %%
