--- a/sn-bibliography.bib
+++ b/sn-bibliography.bib
@@ -782,3 +782,116 @@
   year={2022},
   publisher={Frontiers}
 }
+
+%%%%%
+% Annotated studies
+%%%%%
+
+@article{ahmadi2018single,
+  title={Single high-dose buprenorphine for opioid craving during withdrawal},
+  author={Ahmadi, Jamshid and Jahromi, Mina Sefidfard and Ghahremani, Dara and London, Edythe D},
+  journal={Trials},
+  volume={19},
+  number={1},
+  pages={1--7},
+  year={2018},
+  publisher={BioMed Central}
+}
+
+@article{atici2017effect,
+  title={The effect of Kinesio taping on back pain in patients with Lenke Type 1 adolescent idiopathic scoliosis: A randomized controlled trial},
+  author={Atici, Yunus and Aydin, Canan Gonen and Atici, Aysegul and Buyukkuscu, Mehmet Ozbey and Arikan, Yavuz and Balioglu, Mehmet Bulent},
+  journal={Acta Orthopaedica et Traumatologica Turcica},
+  volume={51},
+  number={3},
+  pages={191--196},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@article{bai2020randomised,
+  title={A Randomised Controlled Trial to Evaluate the Administration of the Health Improvement Card as a Health Promotion Tool: A Physiotherapist-Led Community-Based Initiative},
+  author={Bai, Yiwen and Wu, Xubo and Tsang, Raymond CC and Yun, Ruisheng and Lu, Yan and Dean, Elizabeth and Jones, Alice YM},
+  journal={International Journal of Environmental Research and Public Health},
+  volume={17},
+  number={21},
+  pages={8065},
+  year={2020},
+  publisher={MDPI}
+}
+
+@article{barker2019evaluation,
+  title={Evaluation of RESPOND, a patient-centred program to prevent falls in older people presenting to the emergency department with a fall: A randomised controlled trial},
+  author={Barker, Anna and Cameron, Peter and Flicker, Leon and Arendts, Glenn and Brand, Caroline and Etherton-Beer, Christopher and Forbes, Andrew and Haines, Terry and Hill, Anne-Marie and Hunter, Peter and others},
+  journal={PLoS medicine},
+  volume={16},
+  number={5},
+  pages={e1002807},
+  year={2019},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{bjerre2019community,
+  title={Community-based football in men with prostate cancer: 1-year follow-up on a pragmatic, multicentre randomised controlled trial},
+  author={Bjerre, Eik Dybboe and Petersen, Thomas Hindborg and J{\o}rgensen, Anders Bojer and Johansen, Christoffer and Krustrup, Peter and Langdahl, Bente and Poulsen, Mads Hvid and Madsen, S{\o}ren S{\o}rensen and {\O}stergren, Peter Busch and Borre, Michael and others},
+  journal={PLoS medicine},
+  volume={16},
+  number={10},
+  pages={e1002936},
+  year={2019},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{cameron2013multifactorial,
+  title={A multifactorial interdisciplinary intervention reduces frailty in older people: randomized trial},
+  author={Cameron, Ian D and Fairhall, Nicola and Langron, Colleen and Lockwood, Keri and Monaghan, Noeline and Aggar, Christina and Sherrington, Catherine and Lord, Stephen R and Kurrle, Susan E},
+  journal={BMC medicine},
+  volume={11},
+  number={1},
+  pages={1--10},
+  year={2013},
+  publisher={BioMed Central}
+}
+
+@article{becker2020prevention,
+  title={The prevention of musculoskeletal complaints: long-term effect of a work-related psychosocial coaching intervention compared to physiotherapy alone—a randomized controlled trial},
+  author={Becker, Annette and Angerer, Peter and Weber, Jeannette and M{\"u}ller, Andreas},
+  journal={International archives of occupational and environmental health},
+  volume={93},
+  pages={877--889},
+  year={2020},
+  publisher={Springer}
+}
+
+@article{cannata2022single,
+  title={A single-oral bolus of 100,000 IU of cholecalciferol at hospital admission did not improve outcomes in the COVID-19 disease: the COVID-VIT-D—a randomised multicentre international clinical trial},
+  author={Cannata-And{\'\i}a, Jorge B and D{\'\i}az-Sottolano, Augusto and Fern{\'a}ndez, Pehu{\'e}n and Palomo-Antequera, Carmen and Herrero-Puente, Pablo and Mouzo, Ricardo and Carrillo-L{\'o}pez, Natalia and Panizo, Sara and Iba{\~n}ez, Guillermo H and Cusumano, Carlos A and others},
+  journal={BMC medicine},
+  volume={20},
+  number={1},
+  pages={1--13},
+  year={2022},
+  publisher={BioMed Central}
+}
+
+@article{dangour2011effect,
+  title={Effect of a nutrition supplement and physical activity program on pneumonia and walking capacity in Chilean older people: a factorial cluster randomized trial},
+  author={Dangour, Alan D and Albala, Cecilia and Allen, Elizabeth and Grundy, Emily and Walker, Damian G and Aedo, Cristian and Sanchez, Hugo and Fletcher, Olivia and Elbourne, Diana and Uauy, Ricardo},
+  journal={PLoS medicine},
+  volume={8},
+  number={4},
+  pages={e1001023},
+  year={2011},
+  publisher={Public Library of Science San Francisco, USA}
+}
+
+@article{darlow2019fear,
+  title={The Fear Reduction Exercised Early (FREE) approach to management of low back pain in general practice: a pragmatic cluster-randomised controlled trial},
+  author={Darlow, Ben and Stanley, James and Dean, Sarah and Abbott, J Haxby and Garrett, Sue and Wilson, Ross and Mathieson, Fiona and Dowell, Anthony},
+  journal={PLoS medicine},
+  volume={16},
+  number={9},
+  pages={e1002897},
+  year={2019},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
